# nagios-monitoring

./: CMakeLists.txt  README.md  platform-version-prereq.cmake  version.cmake
cmake_modules/: nmCommonSetup.cmake
cmake_modules/dependencies/: el5.cmake.in  el6.cmake  el6.cmake.in  el7.cmake.in  lucid.cmake.in  oneiric.cmake.in  precise.cmake
commands/: CMakeLists.txt
commands/send_status/: CMakeLists.txt  main.cpp
config/: CMakeLists.txt  check_longrunning_proc.cfg  esphttp.cfg  hpcc_commands.cfg  hpcc_nagios.cfg  hpcc_nrpe.cfg
hpcc-nagios-tools/: CMakeLists.txt  HPCCNagiosToolSet.cpp  HPCCNagiosToolSet.hpp  HPCCNagiosToolSetCommon.hpp  hpcc_centralized_nagios.py  main.cpp  setup.py
utils/: CMakeLists.txt  check_roxie
utils/check_dafilesrv/: CMakeLists.txt  main.cpp
utils/check_dali/: CMakeLists.txt  main.cpp
utils/check_roxie/: CMakeLists.txt  check_roxie
utils/check_sasha/: CMakeLists.txt  main.cpp
vm_precise/: check_longrunning_proc  install_nagios_for_hpcc.sh
